# mit-racecar-lidar-calibration

./: README.md
src/lidar_transform/: CMakeLists.txt  package.xml
src/lidar_transform/launch/: vlp16_lidar_transform.launch
src/lidar_transform/scripts/: extrinsics_broadcast.sh  extrinsics_broadcaster.py  final_transform.py  final_transform.sh
src/velodyne_pointcloud/launch/: 32e_points.launch  VLP16_points.launch  extrinsic_calibration.launch  multi_32e_points.launch
src/velodyne_pointcloud/params/: final_extrinsic.yaml  vlp16_extrinsic.yaml
